# openrank-relayer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  config.toml.example  rust-toolchain.toml  rustfmt.toml
.github/workflows/: clippy.yml  test.yml
assets/: schema.sql
src/: lib.rs  main.rs  postgres.rs  protocol_client.rs  types.rs
src/api/: connect.rs  mod.rs  schema.rs  server.rs
